--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,8 +7,10 @@
     <title>My home page</title>
 </head>
 <body>
-    <h1>Hello Linh</h1>
+    <h1 style="color: rgb(129, 198, 230)">Hello Linh</h1>
     <hr>
     {{now}}
+
 </body>
 </html>
+
